# SlideForge

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
docs/plans/: visual-asset-approval-pipeline-v2.md
src/hermes_slide_forge/: __init__.py
src/oh_my_side_design/: __init__.py
src/slideforge/: __init__.py  archetype_mapper.py  asset_approval.py  asset_brief.py  asset_brief_generator.py  asset_spec.py  browser_capture.py  browser_regression.py  cli.py  comfyui_handoff.py  deck_preparer.py  design_source_pipeline.py  design_spec.py  evidence_pack.py  evidence_summary.py  fidelity_report.py  fidelity_scorer.py  guizang_html_composer.py  manual_assets.py  manual_prompts.py  pptx_delivery_gate.py  pptx_export.py  run_manifest.py  run_pipeline.py  schemas.py  section_preparer.py  smoke_run.py  source_pipeline.py  template_analyzer.py  toolchain.py
tests/: test_asset_brief_generator.py  test_browser_capture.py  test_browser_regression.py  test_cli.py  test_comfyui_handoff.py  test_deck_preparer.py  test_evidence_pack.py  test_evidence_summary.py  test_fidelity_report.py  test_guizang_html_composer.py  test_manual_openai_assets.py  test_phase1_models.py  test_pptx_delivery_gate.py  test_pptx_export.py  test_run_manifest.py  test_run_pipeline.py  test_schemas.py  test_section_preparer.py  test_smoke_run.py  test_template_pipeline.py  test_toolchain.py
