[project]
name = "SlideForge"
version = "0.1.0"
description = "High-fidelity slide generation pipeline with ComfyUI assets, guizang HTML composition, and PPTX delivery."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
slideforge = "slideforge.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]
browser = ["playwright>=1.45"]
pptx = ["python-pptx>=1.0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["browser: tests that launch a real Playwright browser when available"]
